<resources>
    <string name="app_name">KidsNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dose">dose</string>
    <string name="medication">medication</string>
    <string name="intake_time">time of intake</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="insert">insert</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>